# Neo

./: .clang-format  .gitignore  Makefile  README.md  pyproject.toml
docker/orin/: Dockerfile  build.sh  init.sh  macro.sh  run.sh
docker/server/: Dockerfile  build.sh  init.sh  macro.sh  run.sh
docker/utils/: attach.sh  exec.sh
env/: orin_env.sh  server_env.sh
script/: draw.sh  env.sh  orin_download.sh  orin_run.sh  orin_zip.sh  server_download.sh  server_run.sh  server_zip.sh
script/chapter3_motivation/figure_5/: orin_run.sh
script/chapter4_algorithm/figure_10/: orin_run.sh
script/chapter6_evaluation/figure_15/: orin_run.sh  server_run.sh
script/chapter6_evaluation/figure_16/: orin_run.sh  server_run.sh
script/chapter6_evaluation/figure_17/: orin_run.sh  server_run.sh
script/chapter6_evaluation/figure_18/: server_run.sh
script/chapter6_evaluation/figure_19/: server_background_sorting_run.sh  server_hierarchical_sorting_run.sh  server_neo_run.sh  server_periodic_sorting_run.sh  server_run.sh
script/chapter6_evaluation/table_2/: server_run.sh
script/utils/: draw.py  generate_simulator_yaml.py  generate_trace_yaml.py  postprocess.py  run.py
src/app/gaussian_splatting/gaussian_splatting_backend/: setup.py
src/app/gaussian_splatting/gaussian_splatting_backend/src/gaussian_splatting_backend/: CMakeLists.txt  __init__.py  rasterize_points.cu  rasterize_points.h
src/app/gaussian_splatting/gaussian_splatting_backend/src/gaussian_splatting_backend/cuda_rasterizer/: backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
src/app/gaussian_splatting/gaussian_splatting_frontend/: pyproject.toml
src/app/gaussian_splatting/gaussian_splatting_frontend/src/gaussian_splatting_frontend/: __init__.py
src/app/gaussian_splatting/gaussian_splatting_frontend/src/gaussian_splatting_frontend/arguments/: __init__.py
src/app/neo_sw/neo_sw_backend/: setup.py
src/app/neo_sw/neo_sw_backend/src/neo_sw_backend/: __init__.py  rasterize_points.cu  rasterize_points.h
src/app/neo_sw/neo_sw_frontend/: pyproject.toml
src/app/neo_sw/neo_sw_frontend/src/neo_sw_frontend/: __init__.py
src/neo_ae/: __init__.py  draw.py  env.py  metric.py  postprocess.py  run.py
src/simulator/neo/: CMakeLists.txt
src/simulator/neo/src/: common_phase.cc  core.h  reuse_phase.cc  reuse_phase.h  simulator.h  sorter.h  trace.cc  utils.h  variable.cc
src/simulator/neo_hs/: CMakeLists.txt
src/simulator/neo_hs/config/dram/: LPDDR4-16CH.cfg
src/simulator/neo_hs/src/: common_phase.h  core.cc  main.cc  render_phase.h  renderer.cc  reuse_phase.cc  reuse_phase.h  simulator.cc  sorter.cc  sorter.h  trace.h  utils.h
src/simulator/neo_only_s/: CMakeLists.txt
src/simulator/neo_only_s/src/: common_phase.cc  common_phase.h  core.cc  core.h  dram.h  variable.h
src/simulator/neo_s/: CMakeLists.txt
src/simulator/neo_s/config/dram/: LPDDR4-4CH.cfg  LPDDR4-8CH.cfg
src/simulator/neo_s/config/system/: NEO_S.yaml
src/simulator/neo_s/src/: core.cc  core.h  dram.cc  postprocessor.cc  postprocessor.h  render_phase.cc  renderer.h  sorter.cc  trace.cc  utils.h
src/trace/neo_trace/neo_trace_backend/: pyproject.toml  setup.py
src/trace/neo_trace/neo_trace_backend/src/neo_trace_backend/: CMakeLists.txt  __init__.py  ext.cpp
src/trace/neo_trace/neo_trace_backend/src/neo_trace_backend/cuda_rasterizer/: forward.cu  preprocess.h  rasterize.cu  rasterize.h  sort.cu  utils.cu  variable.h
src/trace/neo_trace/neo_trace_frontend/: pyproject.toml
src/trace/neo_trace/neo_trace_frontend/src/neo_trace_frontend/: __init__.py
src/trace/neo_trace/periodic_sorting_trace_backend/: pyproject.toml  setup.py
src/trace/neo_trace/periodic_sorting_trace_backend/src/periodic_sorting_trace_backend/: CMakeLists.txt
(+37 files in other folders)
