[project]
name = "neo_trace_backend"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [ "torch>=2.9.1" ]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "torch>=2.9.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
